--- a/src/roomease/users/EditUser.form
+++ b/src/roomease/users/EditUser.form
@@ -262,7 +262,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="59" green="ec" red="f7" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="New Password:"/>
+            <Property name="text" type="java.lang.String" value="         Password:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passwordField1">
